# sf-street-cleaning

./: .gitignore  CNAME  README.md  app.js  index.html  main.py  pyproject.toml  requirements.txt  street-cleaning-map.html  styles.css
.github/workflows/: main.yaml
data/: neighborhoods.geojson
data/neighborhoods/: AlamoSquare.geojson  AnzaVista.geojson  ApparelCity.geojson  AquaticParkFtMason.geojson  AshburyHeights.geojson  BalboaTerrace.geojson  Bayview.geojson  BernalHeights.geojson  BretHarte.geojson  BuenaVista.geojson  CandlestickPointSRA.geojson  Castro.geojson  CathedralHill.geojson  Cayuga.geojson  CentralWaterfront.geojson  Chinatown.geojson  CivicCenter.geojson  ClarendonHeights.geojson  ColeValley.geojson  CoronaHeights.geojson  CowHollow.geojson  CrockerAmazon.geojson  DiamondHeights.geojson  Dogpatch.geojson  DoloresHeights.geojson  DowntownUnionSquare.geojson  DuboceTriangle.geojson  EurekaValley.geojson  Excelsior.geojson  Fairmount.geojson  FinancialDistrict.geojson  FishermansWharf.geojson  ForestHill.geojson  ForestKnolls.geojson  GlenPark.geojson  GoldenGateHeights.geojson  GoldenGatePark.geojson  HaightAshbury.geojson  HayesValley.geojson  HollyPark.geojson  (+76 more)
pre_release_scripts/: README.md  transformations.py
